[package]
name = "ecosystem"
version = "0.1.0"
authors = ["Thomas Freeman <tomclaudefreeman@gmail.com>"]
edition = "2018"
description = "A small genetic algorithms library."
repository = "https://github.com/thfm/ecosystem"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1"
